Add G1 Notes